# gpu-graphics-project

./: .gitignore  CMakeLists.txt  README.md
docs/: api_reference.md  vcpkg-libs.txt
shaders/: circle_fragment.glsl  default_fragment.glsl  default_vertex.glsl  fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp
src/gpu/: gpu_utils.cpp  gpu_utils.h
src/graphics/: renderer.cpp  renderer.h
src/gui/: gui_manager.cpp  gui_manager.h
